fix: bg image overflow

--- a/css/style.css
+++ b/css/style.css
@@ -210,7 +210,7 @@
     background-image: url("../images/ghanian.jpg");
     background-position: center;
     background-size: cover;
-    height: 200vh;
+    height: 187vh;
     width: 100vw;
     position: absolute;
     margin-top: 80px;
